force-app/main/default/objects/MiddleTax__c/MiddleTax__c.object-meta.xml
<CustomObject>
    <label>MiddleTax</label>
    <pluralLabel>MiddleTaxs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>MiddleTax Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>