force-app/main/default/objects/MiddleTax__c/fields/Max_tax__c.field-meta.xml
<CustomField>
    <fullName>Max_tax__c</fullName>
    <label>Max tax</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>