force-app/main/default/objects/MiddleTax__c/fields/Min_tax__c.field-meta.xml
<CustomField>
    <fullName>Min_tax__c</fullName>
    <label>Min tax</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>