force-app/main/default/objects/MiddleTax__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>